--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -12,6 +12,7 @@ body {
   font-size: pxToRem(16);
   line-height: 1.75;
   font-weight: 300;
+  color: white;
   background-color: color(bgColor);
 }
 
