--- a/style.css
+++ b/style.css
@@ -314,6 +314,7 @@ body {
   font-size: 1rem;
   line-height: 1.75;
   font-weight: 300;
+  color: white;
   background-color: var(--color-bgColor); }
 
 *,
