paramétrage des variables

--- a/assets/scss/partials/utils/_variables.scss
+++ b/assets/scss/partials/utils/_variables.scss
@@ -2,14 +2,14 @@
 // colors
 
 $colors: (
-  bgColor    : #f8f8f8,// gris clair
-  selected   : #5289A0,// bleu canard
-  footerbg   : #380A44// violet + écriture
+  bgColor    : #000000,// noir
+  red        : #E70236,// rouge
+  footerbg   : #707070// Gris
 );
 
 $typo: (
-  cursive    : 'Homemade Apple',
-  sans-serif : 'Raleway'
+  Bebas    : 'Bebas Neue',
+  Roboto : 'Roboto'
 );
 
 // Transitions
