--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,600,700&display=swap');
+
 
 :root {
   @each $name, $color in $colors {
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: map-get($typo, sans-serif), sans-serif;
+  font-family: map-get($typo, Roboto), sans-serif;
   font-size: pxToRem(16);
   line-height: 1.75;
   font-weight: 300;
@@ -22,7 +22,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: map-get($typo, cursive), serif;
+  font-family: map-get($typo, Bebas), serif;
   font-weight: normal;
   text-transform: uppercase;
 }
