--- a/style.css
+++ b/style.css
@@ -372,6 +372,7 @@ a {
 
 address {
   font-style: normal; }
+
 .menu {
   color: white;
   display: flex;
@@ -381,38 +382,48 @@ address {
     justify-content: space-around;
     padding: 0;
     align-items: center;
-    width: 80%; }
+    width: 80%;
+    height: 147px; }
+    .menu ul :nth-child(4) {
+      width: 255px;
+      height: 100%; }
+      .menu ul :nth-child(4) a {
+        width: 100%; }
+        .menu ul :nth-child(4) a:hover {
+          font-weight: inherit;
+          border-bottom: 0; }
+        .menu ul :nth-child(4) a h1 {
+          display: block;
+          height: 100%;
+          width: 100%;
+          position: relative;
+          visibility: hidden;
+          text-transform: none;
+          margin: 0; }
+          .menu ul :nth-child(4) a h1::before {
+            content: "";
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            background-image: url(assets/img/ignisfatuuslogo.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            visibility: visible; }
     .menu ul li {
-      height: 100%;
+      height: 30%;
       display: flex; }
-      .menu ul li h1 {
-        display: block;
-        height: 100%;
-        position: relative;
-        visibility: hidden;
-        text-transform: none;
-        margin: 0; }
-        .menu ul li h1::before {
-          content: "";
-          position: absolute;
-          align-items: center;
-          height: 111px;
-          width: 109px;
-          background-image: url(assets/img/ignisfatuuslogo.png);
-          visibility: visible; }
       .menu ul li a {
         font-family: "Bebas Neue", serif;
-        font-size: 1.5rem;
+        font-size: 1.75rem;
+        color: var(--color-footerbg);
         display: flex;
         align-items: center; }
         .menu ul li a:hover {
-          font-weight: 700;
-          color: var(--color-selected);
           border-bottom: 2px solid var(--color-red); }
       .menu ul li .selected {
         font-weight: 700;
-        color: var(--color-selected);
         text-decoration: underline; }
+
 .banniere img {
   width: 100%; }
 
@@ -431,14 +442,6 @@ address {
   .groupe .text p {
     background-color: rgba(0, 0, 0, 0.9);
     width: 60%; }
-  position: relative; }
-  .groupe .photoG1 img {
-    width: 60%; }
-  .groupe .text {
-    position: absolute;
-    top: 100px;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.9); }
   .groupe .photoG2 img {
     width: 60%; }
   .groupe .photoG3 img {
@@ -451,14 +454,3 @@ address {
     width: 100%; }
     .medias .wmspace .wmspacer, .discographie .wmspace .wmspacer, .concerts .wmspace .wmspacer {
       width: 76px; }
-.groupe .photoG1 img {
-  width: 60%; }
-
-.groupe .text {
-  background-color: rgba(0, 0, 0, 0.9); }
-
-.groupe .photoG2 img {
-  width: 60%; }
-
-.groupe .photoG3 img {
-  width: 60%; }
