--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,6 +2,7 @@
 
 @import "./partials/utils/variables";
 @import "./partials/utils/mixins";
+@import "./partials/utils/space";
 
 @import "./partials/vendors/normalize";
 
