--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap");
+.space {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 55px 0; }
+  .space .spacer {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    background-color: var(--color-red);
+    height: 4px; }
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -5,7 +18,6 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -327,9 +339,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   text-transform: uppercase; }
 
-h1, h2 {
-  font-size: 2.125rem;
-  line-height: 1.2; }
+h2 {
+  font-size: 3.4375rem;
+  line-height: 1.2;
+  margin: 0; }
 
 h3, h4, h5, h6 {
   text-transform: inherit;
@@ -363,14 +376,30 @@ address {
 .banniere img {
   width: 100%; }
 
-.groupe .photoG1 img {
-  width: 60%; }
+.groupe {
+  width: 80%;
+  margin: auto; }
+  .groupe :nth-child(odd) {
+    display: flex;
+    justify-content: flex-end; }
+  .groupe .wspaceg {
+    width: 60%; }
+    .groupe .wspaceg .wspacerg {
+      width: 76px; }
+  .groupe .photoG1 img {
+    width: 60%; }
+  .groupe .text p {
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 60%; }
+  .groupe .photoG2 img {
+    width: 60%; }
+  .groupe .photoG3 img {
+    width: 60%; }
 
-.groupe .text {
-  background-color: rgba(0, 0, 0, 0.9); }
-
-.groupe .photoG2 img {
-  width: 60%; }
-
-.groupe .photoG3 img {
-  width: 60%; }
+.medias, .discographie, .concerts {
+  width: 80%;
+  margin: auto; }
+  .medias .wmspace, .discographie .wmspace, .concerts .wmspace {
+    width: 100%; }
+    .medias .wmspace .wmspacer, .discographie .wmspace .wmspacer, .concerts .wmspace .wmspacer {
+      width: 76px; }
