--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./partials/utils/variables";
 @import "./partials/utils/mixins";
 @import "./partials/utils/space";
+@import "./partials/utils/btn";
 
 @import "./partials/vendors/normalize";
 
