--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@
     background-color: var(--color-red);
     height: 4px; }
 
+.btn {
+  padding: 10px;
+  font-size: 1.5625rem;
+  background-color: var(--color-red); }
+  .btn:hover {
+    background-color: white;
+    color: var(--color-red);
+    border: 1px solid var(--color-red); }
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -419,10 +428,6 @@ address {
         display: flex;
         align-items: center; }
         .menu ul li a:hover {
-<<<<<<< HEAD
-          font-weight: 700;
-=======
->>>>>>> refs/remotes/origin/master
           border-bottom: 2px solid var(--color-red); }
       .menu ul li .selected {
         font-weight: 700;
