--- a/assets/scss/partials/layout/_nav.scss
+++ b/assets/scss/partials/layout/_nav.scss
@@ -4,44 +4,54 @@
   justify-content: center;
   ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 0;
     align-items: center;
-    width: 80%;
+    width: 90%;
     :nth-child(4) {
-      width: 255px;
+      width: 100%;
       height: 100%;
+      display: flex;
+      justify-content: center;
       a {
         width: 100%;
         &:hover {
           font-weight: inherit;
           border-bottom: 0;
         }
-        h1 {
-          display: block;
-          height: 100%;
+        img {
           width: 100%;
-          position: relative;
-          visibility: hidden;
-          text-transform: none;
-          margin: 0;
-          &::before {
-            content: "";
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            background-image: url(assets/img/ignisfatuuslogo.png);
-            background-repeat: no-repeat;
-            background-position: center;
-            visibility: visible;
-          }
         }
+        h1 {
+          text-indent: -9999999px;
+        }
+        // h1 {
+        //   display: block;
+        //   height: 100%;
+        //   width: 100%;
+        //   position: relative;
+        //   visibility: hidden;
+        //   text-transform: none;
+        //   margin: 0;
+        //   &::before {
+        //     content: "";
+        //     position: absolute;
+        //     height: 100%;
+        //     width: 100%;
+        //     background-image: url(assets/img/ignisfatuuslogo.png);
+        //     background-repeat: no-repeat;
+        //     background-position: center;
+        //     visibility: visible;
+        //   }
+        // }
       }
     }
     height: 147px;
     li {
       height: 30%;
+      width: 60%;
       display: flex;
+      justify-content: center;
       a {
         font-family: map-get($typo, Bebas), serif;
         font-size: pxToRem(28);
