--- a/style.css
+++ b/style.css
@@ -394,39 +394,30 @@ address {
   justify-content: center; }
   .menu ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 0;
     align-items: center;
-    width: 80%;
+    width: 90%;
     height: 147px; }
     .menu ul :nth-child(4) {
-      width: 255px;
-      height: 100%; }
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center; }
       .menu ul :nth-child(4) a {
         width: 100%; }
         .menu ul :nth-child(4) a:hover {
           font-weight: inherit;
           border-bottom: 0; }
+        .menu ul :nth-child(4) a img {
+          width: 100%; }
         .menu ul :nth-child(4) a h1 {
-          display: block;
-          height: 100%;
-          width: 100%;
-          position: relative;
-          visibility: hidden;
-          text-transform: none;
-          margin: 0; }
-          .menu ul :nth-child(4) a h1::before {
-            content: "";
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            background-image: url(assets/img/ignisfatuuslogo.png);
-            background-repeat: no-repeat;
-            background-position: center;
-            visibility: visible; }
+          text-indent: -9999999px; }
     .menu ul li {
       height: 30%;
-      display: flex; }
+      width: 60%;
+      display: flex;
+      justify-content: center; }
       .menu ul li a {
         font-family: "Bebas Neue", serif;
         font-size: 1.75rem;
