--- a/assets/scss/partials/pages/_contact.scss
+++ b/assets/scss/partials/pages/_contact.scss
@@ -1,7 +1,8 @@
 .contact{
+  width:70%;
+  margin: 20px auto;
   p{
-    width:80%;
-    margin : auto;
+    text-align: center;
   }
 }
 
@@ -9,15 +10,58 @@
   background-color: rgba(112,112,112,.3);
   width: 80%;
   margin: auto;
+  display: flex;
+  justify-content: center;
 
-  .civilite,.nom,.coordonnees{
-    display: flex;
-    align-items:center;
-    justify-content: center;
+  .btnform{
+    text-align: right;
   }
-  .Message{
-    display: flex;
-    align-items: center;
-  }
+}
 
+/*************************/
+/***** Bouton radio ******/
+/*************************/
+.cont{
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  input{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+
+  }
+  .chekmark{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 2px solid #707070;
+    &::after{
+      content: "";
+      position: absolute;
+      display: none;
+
+    }
+    input:checked ~ .chekmark:after {
+      display: block;
+    }
+    .chekmark:after {
+      top: 4px;
+      left: 4px;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: #707070;
+    }
+  }
 }
