--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
   .wmspace .wmspacer {
     width: 76px; }
 
+.filariane {
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-footerbg); }
+
 .btn {
   padding: 9px 10px 5px 10px;
   font-family: "Bebas Neue", sans-serif;
@@ -25,6 +30,39 @@
     background-color: white;
     color: var(--color-red);
     border: 1px solid var(--color-red); }
+
+.navpanier {
+  position: relative;
+  height: 200px;
+  width: 50%;
+  margin: auto; }
+  .navpanier ul {
+    z-index: 10;
+    position: absolute;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between; }
+    .navpanier ul li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      text-align: center; }
+      .navpanier ul li img {
+        width: 60px;
+        height: 80px;
+        margin-bottom: 10px; }
+      .navpanier ul li p {
+        margin: 0;
+        font-family: "Bebas Neue", serif; }
+      .navpanier ul li .encours {
+        color: var(--color-red); }
+  .navpanier .linethrough {
+    position: absolute;
+    width: 100%;
+    top: 30%;
+    left: 0; }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -332,7 +370,7 @@ template {
   display: none; }
 
 :root {
-  --color-bgColor: #000000;
+  --color-bgColor: #070707;
   --color-red: #E70236;
   --color-footerbg: #707070; }
 
@@ -364,7 +402,7 @@ h3, h4, h5, h6 {
   letter-spacing: 0.0625rem; }
 
 h3 {
-  font-size: 1.75rem; }
+  font-size: 1.125rem; }
 
 h4 {
   font-size: 1.3125rem; }
@@ -490,35 +528,129 @@ footer {
   .groupe .photoG3 img {
     width: 60%; }
 
-.medias, .discographie, .concerts {
+.medias, .discographie, .concerts, .video {
   width: 80%;
   margin: auto; }
 
-iframe {
-  align-items: center; }
-
-.discographie img {
+.video {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  width: 260px;
-  height: 260px; }
-  .discographie img:hover {
-    background-color: rgba 255, 255, 255, 0.8;
-    border: 1px solid var(--color-red); }
+  justify-content: center; }
+  .video iframe {
+    width: 840px;
+    height: 473px; }
 
-.contact p {
-  width: 80%;
-  margin: auto; }
+.discographie {
+  display: flex;
+  flex-direction: column; }
+  .discographie .albums {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; }
+    .discographie .albums img {
+      width: 260px;
+      height: 260px;
+      margin: 15px 0; }
+      .discographie .albums img:hover {
+        background-color: rgba(255, 255, 255, 0.8);
+        border: 1px solid var(--color-red); }
+
+.contact {
+  width: 70%;
+  margin: 20px auto; }
+  .contact p {
+    text-align: center; }
 
 .formulaire {
   background-color: rgba(112, 112, 112, 0.3);
   width: 80%;
-  margin: auto; }
-  .formulaire .civilite, .formulaire .nom, .formulaire .coordonnees {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .formulaire .Message {
-    display: flex;
-    align-items: center; }
+  margin: auto;
+  display: flex;
+  justify-content: center; }
+  .formulaire .btnform {
+    text-align: right; }
+
+/*************************/
+/***** Bouton radio ******/
+/*************************/
+.cont {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+  .cont input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer; }
+  .cont .chekmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 2px solid #707070; }
+    .cont .chekmark::after {
+      content: "";
+      position: absolute;
+      display: none; }
+    .cont .chekmark input:checked ~ .chekmark:after {
+      display: block; }
+    .cont .chekmark .chekmark:after {
+      top: 4px;
+      left: 4px;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: #707070; }
+
+.produits {
+  width: 75%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+  .produits .article {
+    margin: 15px auto;
+    background-color: rgba(112, 112, 112, 0.48);
+    width: 260px;
+    height: 465px;
+    text-align: center;
+    border: 1px solid rgba(112, 112, 112, 0.48); }
+    .produits .article img {
+      width: 260px;
+      height: 260px;
+      object-fit: cover; }
+    .produits .article .articleTitle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      height: 65px; }
+    .produits .article .articlePrice {
+      height: 70px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      .produits .article .articlePrice p {
+        font-size: 1.125rem;
+        margin: 0; }
+      .produits .article .articlePrice .prixbase {
+        color: var(--color-footerbg);
+        text-decoration: line-through; }
+
+.panier {
+  width: 80%;
+  padding: 30px;
+  background: rgba(112, 112, 112, 0.3);
+  justify-content: space-around; }
+  .panier img {
+    width: 168px;
+    height: 168px;
+    border: 1px solid white; }
