--- a/assets/scss/partials/pages/_panier.scss
+++ b/assets/scss/partials/pages/_panier.scss
@@ -2,7 +2,7 @@
   width: 80%;
   padding: 30px;
   background: rgba(112,112,112,.30);
-  justify-content: space-around;
+  justify-content: center;
   img{
     width: 168px;
     height:168px;
