--- a/style.css
+++ b/style.css
@@ -649,7 +649,7 @@ footer {
   width: 80%;
   padding: 30px;
   background: rgba(112, 112, 112, 0.3);
-  justify-content: space-around; }
+  justify-content: center; }
   .panier img {
     width: 168px;
     height: 168px;
