--- a/assets/scss/partials/pages/_contact.scss
+++ b/assets/scss/partials/pages/_contact.scss
@@ -12,56 +12,62 @@
   margin: auto;
   display: flex;
   justify-content: center;
+  form {
+    font-family: map-get($typo, Bebas), sans-serif;
+    width: 50%;
+    .champs{
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      .civilite{
+        color:rgb(112,112,112);
+        display: flex;
+        justify-content: space-between;
+        font-size: pxToRem(16);
+        width: 30%;
+        margin: auto;
+      }
+        div{
+          width: 30%;
+          margin: auto;
+          input[type=text],[type=email],[type=number]{
+            padding:4px 10px;
+            margin: 8px 0;
+            box-sizing:border-box;
+            border: none;
+            border-bottom:1px solid white;
+            background-color: transparent;
+          }
+        }
 
-  .btnform{
-    text-align: right;
+    }
+    .message{
+      width: 97%;
+      margin: auto;
+      input[type=text]{
+        width: 100%;
+        padding:4px 10px;
+        margin: 0;
+        box-sizing:border-box;
+        border: none;
+        border-bottom:1px solid white;
+        background-color: transparent;
+      }
+      textarea{
+        width: 100%;
+        padding:4px 10px;
+        margin: 0;
+        box-sizing:border-box;
+        border:1px solid white;
+        background-color: transparent;
+      }
+    }
+    .btnform{
+      text-align: right;
+    }
   }
 }
 
 /*************************/
-/***** Bouton radio ******/
+/***** Champs ******/
 /*************************/
-.cont{
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none;
-  input{
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-
-  }
-  .chekmark{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    border: 2px solid #707070;
-    &::after{
-      content: "";
-      position: absolute;
-      display: none;
-
-    }
-    input:checked ~ .chekmark:after {
-      display: block;
-    }
-    .chekmark:after {
-      top: 4px;
-      left: 4px;
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background: #707070;
-    }
-  }
-}
