--- a/assets/scss/partials/pages/_contact.scss
+++ b/assets/scss/partials/pages/_contact.scss
@@ -12,6 +12,68 @@
   margin: auto;
   display: flex;
   justify-content: center;
+  .container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border: 2px solid #707070;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark:after {
+display: block;
+}
+
+/* When the radio button is checked, add a blue background */
+// .container input:checked ~ .checkmark {
+//   background-color: #2196F3;
+// }
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+ 	top: 2px;
+	left: 2px;
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background: #707070;
+}
 
   .btnform{
     text-align: right;
@@ -21,7 +83,9 @@
 /*************************/
 /***** Bouton radio ******/
 /*************************/
-.cont{
+
+/*////////////////////////*/
+/*.cont{
   display: block;
   position: relative;
   padding-left: 35px;
@@ -64,4 +128,4 @@
       background: #707070;
     }
   }
-}
+}*/
