--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,6 +13,7 @@
 
 @import "./partials/layout/header";
 @import "./partials/layout/nav";
+@import "./partials/layout/navShop";
 @import "./partials/layout/footer";
 
 @import "./partials/pages/home";
