--- a/assets/scss/partials/pages/_home.scss
+++ b/assets/scss/partials/pages/_home.scss
@@ -64,12 +64,35 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    img{
-      width: 260px;
-      height: 260px;
-      margin: 15px 0;
-      &:hover{
-        background-color: rgba(255,255,255,.8);
+    .album{
+      position: relative;
+      img{
+        width: 260px;
+        height: 260px;
+        margin: 15px 0;
+      }
+      .description{
+        visibility: hidden;
+        position: absolute;
+        top:0;
+        left:0;
+        width: 260px;
+        height: 260px;
+        margin: 15px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        .sep{
+          height: 2px;
+          width: 20px;
+          background-color: color(red);
+        }
+      }
+      &:hover .description{
+        visibility: visible;
+        background-color: rgba(0,0,0,.7);
         border: 1px solid color(red);
       }
     }
